# luxoft_techground_hackathon_2

./: .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt
initial_data/: cities.txt  data_institutions.csv  map.json  object_on_map.csv
luxoft_techground_hackathon_2/: asgi.py  settings.py  urls.py  wsgi.py
map/: admin.py  models.py  urls.py  views.py
map/management/commands/: load_googlesheet_data.py  load_initial_cities.py  load_objects_on_map.py
map/migrations/: 0001_initial.py  0002_institutiontype_institution_institution_type.py  0003_objectonmap.py
map/static/map/css/: style.css
map/templates/map/: about.html  index.html
templates/: base.html
